fix: overflow auto for tables

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -251,4 +251,11 @@ table {
   td {
     border: 1px solid $grey-color-light;
   }
+
+  @include media-query($on-laptop) {
+    display: block;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+            -ms-overflow-style: -ms-autohiding-scrollbar;
+  }
 }
